# online_model_query

./: .gitattributes  .gitignore  README.md  lfs_files.txt  pyproject.toml
plot/: QA_plot.py  image_classify_plot.py
query/envs/: AlfredGymEnv.py  ImageNet1kCIFAR100GymEnv.py  ImageNet1kGymEnv.py  OpenBookQAGymEnv.py  OpenDomainGymEnv.py  OpenDomainLatencyGymEnv.py  RTXGymEnc.py  RTXGymEnv.py  RTXLatencyGymEnv.py  WaymoGymEnv.py  WaymoLatencyGymEnv.py  __WaymoLatencyGymEnv.py  __init__.py  callbacks.py
query/src/: gptAPI.ipynb  textbleu.py
query/src/alfred/: clip_emb_floorplan.py  clip_emb_instruct.py  llama2_batch.py  llama_paraphrase.py  pivot_results.py  tsne_alfred.py
query/src/cifar100_models/: ViT_cifar100.py  pytorch-cifar-models.py
query/src/image_classify/: clip_embed.py  csv2np.py
query/src/imagenet_models/: ResNet.py  ViT.py  clip.py  convnext.py  imagenet_clip.py  mit.py  mobilenet.py
query/src/mmlu/: MMLU_to_csv.py  clip_embed.py  compare_model.py  pivot_results.py  time_models.py  vicuna-7b_answerMMLU.py  vicuna-7b_test.py
query/src/mrqa/: QA_inference_template.py  clip_embed.py  clip_embed_ans.py  csv2np.py  deberta.py  mmlu_tsne_bandits.py  official_eval_script.py  tsne_bandits.py  tsne_clip.py
query/src/open_domain/: MMLU.py  MMLU_to_csv.py  arm_result_csv2np.py  clip_embed.py  csv2np.py  llama.ipynb  llama_test.py  parseQA.py  vicuna-7b_answerMMLU.py  vicuna-7b_gen.py  vicuna-7b_test.py
query/src/plotting/: Alfred_plot.py  Alfred_subdata_latency.py  Alfred_subdataset.py  Alfred_subsdataset.py  Alfred_tsne_merged.py  Alfred_tsne_offload_latency.py  Alfred_tsne_orig.py  All_exps_reward.py  QA_plot.py  (+17 more)
(+22 files in other folders)
